package seedu.duke.task;

public class Timed {
}
